service/loadbalancer.external.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc-loadbalancer-ext
spec:
  selector:
    app: hello-kubernetes
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
